objects/Academic_Year__c.object
<CustomObject><fields>
        <fullName>CurrentAcademicYrEndDate__c</fullName>
        <description>currentAcademicYearEndDate</description>
        <inlineHelpText>currentAcademicYearEndDate</inlineHelpText>
        <label>CurrentAcademicYrEndDate</label>
        <type>Date</type>
    </fields><fields>
        <fullName>CurrentAcademicYrStartDate__c</fullName>
        <description>currentAcademicYearStartDate</description>
        <inlineHelpText>currentAcademicYearStartDate</inlineHelpText>
        <label>CurrentAcademicYrStartDate</label>
        <type>Date</type>
    </fields><fields>
        <fullName>NextAcademicYrEndDate__c</fullName>
        <description>nextAcademicYearEndDate</description>
        <inlineHelpText>nextAcademicYearEndDate</inlineHelpText>
        <label>NextAcademicYrEndDate</label>
        <type>Date</type>
    </fields><fields>
        <fullName>NextAcademicYrStartDate__c</fullName>
        <description>nextAcademicYearStartDate</description>
        <inlineHelpText>nextAcademicYearStartDate</inlineHelpText>
        <label>NextAcademicYrStartDate</label>
        <type>Date</type>
    </fields><customSettingsType>List</customSettingsType><description>Academic Year</description><enableFeeds>false</enableFeeds><label>Academic Year</label><visibility>Public</visibility></CustomObject>